tools/tests/ui/fail/l1075.cnf
// Test file for error code: L1075
// Expected error: Overflow AUDIO-WAV character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
